# python_sample_app

./: .gitignore  README.md  main.py  prompt.md  pyproject.toml  workspace.code-workspace
.github/workflows/: 00-test.yml  01-test-and-coverage.yml  03-deploy-website.yml  10-release.yml  README.md
artifacts/output_example/: output.txt
artifacts/test_reports/: test-summary.txt  test_summary.html
docs/: specification.md
scripts/: check_tests_mapping.py  debug.py  generate_test_summary_html.py  run_all.bat  run_all.sh  run_all_tests.bat  run_all_tests.py  run_example_with_coverage.py  run_tests_with_coverage.sh
src/python_sample_app/: __init__.py  config.py  main.py
src/python_sample_app/core/: __init__.py
tests/: README.md
tests/example/: config.json  test_901_basic_example.py  test_901_basic_example.yml
tests/feature/: test_201_cli_modes.py  test_201_cli_modes.yml
tests/framework/: README.md  __init__.py  base.py  data_loader.py  executor.py  validators.py  validators_processor.py
tests/integration/: test_301_integration.py  test_301_integration_complete.yml  test_301_integration_rel_fmt.yml
tests/unit/: test_101_gen_basic.py  test_101_gen_basic.yml
